Document PPDG/src/objects/IBBOpportunityPayment__c.object
<CustomObject>
    <description>C00169</description>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>AccountNumber</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Reference_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Reference Information</label>
        <referenceTo>Account_Reference_Information__c</referenceTo>
        <relationshipName>IBBOpportunityPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_with_IBB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account with IBB</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipName>IBBOpportunityPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActionOutcome__c</fullName>
        <label>ActionOutcome</label>
        <picklist>
            <picklistValues>
                <fullName>PENDING</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARD OK - AJE FAILED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARD FAILED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AJE FAILED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUCCESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUSPENDED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROGRESSING</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IBBPaymentType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IBBPaymentType</label>
        <referenceTo>IBBPaymentType__c</referenceTo>
        <relationshipName>IBBOpportunityPayments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>IBBOpportunityPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PassedPaymentType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IBBPaymentType</label>
        <referenceTo>IBBPaymentType__c</referenceTo>
        <relationshipName>IBBOpportunityPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentAmount__c</fullName>
        <label>PaymentAmount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PaymentCard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Card</label>
        <referenceTo>Card__c</referenceTo>
        <relationshipName>IBBOpportunityPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentComments__c</fullName>
        <label>PaymentComments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaymentMethod__c</fullName>
        <label>PaymentMethod</label>
        <picklist>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PaymentTransaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipName>IBBOpportunityPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentTypeAmount__c</fullName>
        <label>PaymentTypeAmount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>IBBOpportunityPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SortCode__c</fullName>
        <label>SortCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>OpportunityPayment</label>
    <nameField>
        <label>IBBOpportunityPayment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OpportunityPayments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>